Fix radio button alignment, flex columns for ie

--- a/assets/styles/breakpoints/_lg_up.scss
+++ b/assets/styles/breakpoints/_lg_up.scss
@@ -16,6 +16,7 @@
 	.pricing-grid {
 		.pricing-item {
 			@extend .col-lg-3;
+			max-width: 25%;
 		}
 	}
 }
